--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,7 @@
   "description": "A simple Looker Studio community visualization for displaying GeoJSON shapes.",
   "logoUrl": "https://upload.wikimedia.org/wikipedia/commons/e/e8/Globe_icon.svg",
   "supportUrl": "https://github.com/baljeets22/geojson-maps",
+  "version": "1.0.0",
   "data": {
     "visualizationType": "LOCAL"
   },
