--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,27 @@
 {
-  "name": "GeoJSON Map",
+  "name": "GeoJSON Map Visualization Package",
   "organization": "Baljeet Labs",
-  "description": "A Looker Studio Community Visualization to render GeoJSON boundaries and polygons.",
+  "description": "A Looker Studio community visualization for displaying and analyzing GeoJSON shapes on a map.",
   "logoUrl": "https://upload.wikimedia.org/wikipedia/commons/e/e8/Globe_icon.svg",
-  "supportUrl": "https://github.com/baljeets22/geojson-maps/",
+  "organizationUrl": "https://github.com/baljeets22/geojson-maps",
+  "supportUrl": "https://github.com/baljeets22/geojson-maps/issues",
   "privacyPolicyUrl": "https://github.com/baljeets22/geojson-maps",
   "termsOfServiceUrl": "https://github.com/baljeets22/geojson-maps",
-  "data": {
-    "visualizationType": "LOCAL"
-  },
+  "packageUrl": "https://baljeets22.github.io/geojson-maps/",
+  "devMode": false,
   "components": [
     {
       "id": "geojson-map",
-      "js": "visualization.js",
-      "css": "style.css"
+      "name": "GeoJSON Map",
+      "description": "Render custom GeoJSON boundaries or polygons with Looker Studio data fields.",
+      "iconUrl": "https://upload.wikimedia.org/wikipedia/commons/e/e8/Globe_icon.svg",
+      "infoUrl": "https://github.com/baljeets22/geojson-maps",
+      "resource": {
+        "js": "https://baljeets22.github.io/geojson-maps/visualization.js",
+        "css": "https://baljeets22.github.io/geojson-maps/style.css",
+        "config": "https://baljeets22.github.io/geojson-maps/viz-config.json",
+        "html": "https://baljeets22.github.io/geojson-maps/index.html"
+      }
     }
-  ],
-  "resources": {
-    "indexHtml": "index.html"
-  }
+  ]
 }
