--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,14 @@
 {
   "name": "GeoJSON Map",
-  "organization": "Baljeet Labs",
-  "description": "A Looker Studio community visualization to render GeoJSON shapes and polygons on maps.",
-  "logoUrl": "https://upload.wikimedia.org/wikipedia/commons/e/e8/Globe_icon.svg",
+  "logoUrl": "https://raw.githubusercontent.com/googledatastudio/community-visualizations/master/docs/codelab/img/table-chart.png",
+  "organization": "Looker Studio Codelab",
   "organizationUrl": "https://github.com/baljeets22/geojson-maps",
-  "supportUrl": "https://github.com/baljeets22/geojson-maps/issues",
-  "privacyPolicyUrl": "https://github.com/baljeets22/geojson-maps",
   "termsOfServiceUrl": "https://github.com/baljeets22/geojson-maps",
+  "supportUrl": "https://github.com/baljeets22/geojson-maps/issues",
+  "packageUrl": "https://url",
+  "privacyPolicyUrl": "https://github.com/baljeets22/geojson-maps",
+  "description": "A Looker Studio community visualization to render GeoJSON shapes and polygons on maps."
+  "devMode": true,
   "data": {
     "visualizationType": "LOCAL"
   },
@@ -15,13 +17,12 @@
       "id": "geojson-map",
       "name": "GeoJSON Map",
       "description": "Displays GeoJSON boundaries, polygons, and regions in Looker Studio reports.",
-      "iconUrl": "https://upload.wikimedia.org/wikipedia/commons/e/e8/Globe_icon.svg",
-      "js": "viz-codelab.js",
-      "css": "viz-codelab.css",
-      "useCustomConfig": false
+      "iconUrl": "https://raw.githubusercontent.com/googledatastudio/community-visualizations/master/docs/codelab/img/table-chart.png",
+      "resource": {
+                "js": "viz-codelab.js",
+                "config": "viz-codelab.json",
+                "css": "viz-codelab.css"
+            }
     }
-  ],
-  "resources": {
-    "indexHtml": "index.html"
-  }
+  ]
 }
